Checkpointing changes.