@@ -113,13 +113,6 @@
       <scope>test</scope>
     </dependency>
 
-    <!--
-    <dependency>
-      <groupId>org.hibernate.javax.persistence</groupId>
-      <artifactId>hibernate-jpa-2.1-api</artifactId>
-      <version>1.0.0.Final</version>
-    </dependency>
--->
     <dependency>
       <groupId>org.hibernate.validator</groupId>
       <artifactId>hibernate-validator</artifactId>
@@ -178,6 +171,26 @@
           <testTarget>${java.version}</testTarget>
           <compilerArgument>-Xlint:unchecked</compilerArgument>
           <compilerArgument>-Xlint:deprecation</compilerArgument>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.2</version>
+        <dependencies>
+          <dependency>
+            <groupId>org.apache.maven.surefire</groupId>
+            <artifactId>surefire-junit47</artifactId>
+            <version>2.22.2</version>
+          </dependency>
+        </dependencies>
+        <configuration>
+          <argLine>--illegal-access=permit</argLine>
+          <argLine>-Xmx1024m -Djava.net.preferIPv4Stack=true</argLine>
+          <argLine>-Dcom.sun.xml.bind.v2.runtime.JAXBContextImpl.fastBoot=true</argLine>
+          <argLine>-Dlogging.config=./src/test/resources/logback.xml</argLine>
+          <argLine>-Djava.util.logging.config.file=./src/test/resources/logging.properties</argLine>
         </configuration>
       </plugin>
 
